# geneva

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
specification/: README.md
src/geneva/: main.py  model.py  utils.py
src/geneva/services/: base.py  openrouter.py  openrouter_config.py  opentarget.py  opentarget_config.py
src/geneva/static/: index.html  styles.css
src/geneva/static/js/: main.js
tests/geneva/: test_main.py  test_model.py
tests/geneva/services/: test_openrouter.py  test_opentarget.py
